# colony

./: .gitignore  CMakeLists.txt  README.md  build.sh  colony-mvc.sln  out.txt
colony-mvc/: colony-mvc.vcxproj  colony-mvc.vcxproj.filters
colony-tests/: colony-tests.vcxproj
src/: CMakeLists.txt  main.cpp  runtests.cpp
src/map/: map.cpp  map.h  tile.cpp  tile.h
src/test/: map.cpp  tile.cpp
